# docker-primeiros-passos

./: Dockerfile  README.md  app.py  pyproject.toml
