[project]
name = "docker-primeiros-passos"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonas Barletta",email = "jonasbarletta@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.42.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
